@@ -1,3 +1,12 @@
+2002-11-02  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/gaol.jl: added get-font-typed, font-type-exists-p
+	and font-name functions
+
+	* sawfish/wm/windows.jl (dock-window-depth): changed to -3,
+	places the dock above the desktop, but below pretty much
+	everything else
+
 2002-10-20    <jsh@unfactored.org>
 
 	* sawfish/wm/windows.jl (window-transient-p,
